# Simple3DEngine

./: CMakeLists.txt  README.md
include/: AbstractObject.hpp  Camera.hpp  MathUtils.hpp
src/: AbstractObject.cpp  MathUtils.cpp  main.cpp
